--- a/src/components/Tracker.css
+++ b/src/components/Tracker.css
@@ -1,3 +1,8 @@
 .title {
     border-bottom: 1px black solid;
 }
+
+.items-container {
+    display: flex;
+    flex-wrap: wrap;
+}
